<resources>
    <string name="app_name">Popular Movies</string>

    <!--Error Message-->
    <string name="error_message">An Internet connection error has occurred. Please try again.</string>

    <!--No favorites message-->
    <string name="no_favorites_message">You have no movies in your favorites collection. Mark them with the star!</string>

    <!--Menu Item names-->
    <string name="sort_by_most_popular">Sort by most popular</string>
    <string name="sort_by_highest_rated">Sort by highest rated</string>
    <string name="display_favorites">Favorites</string>

    <!-- Detail Activity-->
    <string name="detail_id_label">ID:</string>
    <string name="detail_title_label">Title:</string>
    <string name="detail_synopsis_label">Synopsis:</string>
    <string name="detail_user_rating_label">User Rating:</string>
    <string name="detail_release_date_label">Release Date:</string>

    <!-- get average user rating of a specific movie at runtime
    %[parameter_index$][format_type]
    -->
    <string name="out_of_10">%1$d/10</string>

    <string name="detail_videos_label">Videos (will open in new browser):</string>
    <string name="detail_play_trailer_1_label">Play Trailer 1</string>
    <string name="detail_play_trailer_2_label">Play Trailer 2</string>
    <string name="detail_play_trailer_3_label">Play Trailer 3</string>

    <string name="detail_reviews_label">Reviews:</string>

    <!-- Content descriptions-->
    <string name="movie_picture_content_description">Movie picture</string>
    <string name="star_button_content_description">Star button</string>
</resources>
