<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_picture_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_id_label"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_display_id"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_display_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toRightOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@+id/image_iv"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_title_label"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_display_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_display_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toRightOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_display_id"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_synopsis_label"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_display_synopsis"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_display_synopsis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_display_title"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:paddingBottom="32dp"
            android:text="@string/detail_user_rating_label"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_display_user_rating"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_display_user_rating"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:paddingBottom="32dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tv_display_synopsis" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>